Initial changes to remove react-scripts

--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -1,14 +1,18 @@
-name: Build main
-concurrency: 
+---
+name: Build main Branch
+
+concurrency:
   group: build-${{ github.ref }}
   cancel-in-progress: true
+
+# yamllint disable-line rule:truthy
 on:
   push:
     branches:
-    - main
+      - main
 
 jobs:
   build:
-    uses: LinkedMink/road-wave-fm-web/.github/workflows/build.yml@main
+    uses: LinkedMink/.github/.github/workflows/build-npm-package.yml@main
     with:
       uploadBuild: false
