--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
   "name": "@linkedmink/road-wave-fm-web",
-  "version": "1.1.0",
+  "version": "1.3.0-0",
   "description": "A web application to communicate with the Road Wave FM data source",
+  "homepage": "https://github.com/LinkedMink/road-wave-fm-web#readme",
+  "bugs": {
+    "url": "https://github.com/LinkedMink/road-wave-fm-web/issues",
+    "email": "harlan.sang@linkedmink.net"
+  },
   "license": "MIT",
   "author": {
     "name": "Harlan Sang",
-    "email": "harlan.sang@linkedmink.net"
+    "email": "harlan.sang@linkedmink.net",
+    "url": "https://github.com/LinkedMink"
+  },
+  "funding": {
+    "type": "individual",
+    "url": "https://github.com/sponsors/LinkedMink"
   },
   "repository": {
     "type": "git",
@@ -13,77 +23,103 @@
   },
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "postbuild": "ts-node --esm --project deploy/tsconfig.json --require dotenv/config deploy/PostBuild.mts",
-    "postinstall": "husky install || cd .",
-    "test": "react-scripts test --watchAll",
-    "test:ci": "react-scripts test --coverage --silent --ci",
-    "eject": "react-scripts eject",
-    "lint": "eslint src/**/*.ts{,x} deploy/**/*.{,m,c}ts *.{,m,c}js",
-    "format": "prettier --write src/**/*.ts{,x} deploy/**/*.{,m,c}ts *.{m,c,}js{,on}"
+    "start": "dotenv -- webpack serve --open --config config/webpack.serve.ts",
+    "build": "dotenv -- webpack --config config/webpack.prod.ts",
+    "build:dev": "dotenv -- webpack --config config/webpack.dev.ts",
+    "build:local": "dotenv -- webpack --config config/webpack.local.ts",
+    "build:analyze": "webpack-bundle-analyzer dist/stats.json",
+    "test": "jest --watchAll --config config/jest.config.ts",
+    "test:ci": "jest --coverage --ci --config config/jest.config.ts",
+    "test:debug": "jest --cache=false --detectOpenHandles --runInBand --watchAll --config config/jest.config.ts",
+    "lint": "eslint src/**/*.ts{,x} config/**/*.{,m,c}ts *.{,m,c}js",
+    "format": "prettier --write src/**/*.ts{,x} deploy/**/*.{,m,c}ts *.{m,c,}js{,on}",
+    "preversion": "npm run lint",
+    "version": "npm run build && git add .",
+    "postversion": "echo \"bash ./docker/build.sh\"",
+    "prepare": "husky || cd ."
   },
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
-    "@fontsource/roboto": "^4.5.8",
+    "@fontsource/roboto": "^5.0.8",
     "@googlemaps/js-api-loader": "^1.12.11",
     "@mui/icons-material": "^5.10.2",
     "@mui/material": "^5.10.2",
-    "@reduxjs/toolkit": "^1.8.5",
-    "jose": "^4.9.0",
-    "marked": "^4.0.19",
-    "query-string": "^7.0.1",
+    "@reduxjs/toolkit": "^2.1.0",
+    "jose": "^5.2.1",
+    "marked": "^12.0.0",
+    "query-string": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.2",
+    "react-redux": "^9.1.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "web-vitals": "^3.0.0",
-    "workbox-background-sync": "^6.5.4",
-    "workbox-broadcast-update": "^6.5.4",
-    "workbox-cacheable-response": "^6.5.4",
-    "workbox-core": "^6.5.4",
-    "workbox-expiration": "^6.5.4",
-    "workbox-google-analytics": "^6.5.4",
-    "workbox-navigation-preload": "^6.5.4",
-    "workbox-precaching": "^6.5.4",
-    "workbox-range-requests": "^6.5.4",
-    "workbox-routing": "^6.5.4",
-    "workbox-strategies": "^6.5.4",
-    "workbox-streams": "^6.5.4"
+    "workbox-background-sync": "^7.0.0",
+    "workbox-broadcast-update": "^7.0.0",
+    "workbox-cacheable-response": "^7.0.0",
+    "workbox-core": "^7.0.0",
+    "workbox-expiration": "^7.0.0",
+    "workbox-google-analytics": "^7.0.0",
+    "workbox-navigation-preload": "^7.0.0",
+    "workbox-precaching": "^7.0.0",
+    "workbox-range-requests": "^7.0.0",
+    "workbox-routing": "^7.0.0",
+    "workbox-strategies": "^7.0.0",
+    "workbox-streams": "^7.0.0"
   },
   "devDependencies": {
-    "@testing-library/dom": "^8.17.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
+    "@testing-library/dom": "^9.3.4",
+    "@testing-library/jest-dom": "^6.4.1",
+    "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.4.3",
-    "@tsconfig/create-react-app": "^1.0.2",
-    "@tsconfig/node16": "^1.0.3",
+    "@tsconfig/node20": "^20.1.2",
+    "@tsconfig/vite-react": "^3.0.0",
     "@types/google.maps": "^3.50.0",
-    "@types/jest": "^27.5.2",
-    "@types/jsonwebtoken": "^8.5.9",
-    "@types/marked": "^4.0.6",
-    "@types/node": "^16.11.56",
+    "@types/jest": "^29.5.12",
+    "@types/marked": "^6.0.0",
+    "@types/node": "^20.11.16",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/url-join": "^4.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.35.1",
-    "@typescript-eslint/parser": "^5.35.1",
+    "@types/webpack-bundle-analyzer": "^4.6.3",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
     "browserslist": "^4.21.3",
     "chalk": "^5.0.1",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^6.10.0",
+    "css-minimizer-webpack-plugin": "^6.0.0",
     "dotenv": "^16.0.1",
+    "dotenv-cli": "^7.3.0",
     "eslint": "^8.23.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.31.1",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
-    "react-scripts": "~5.0.1",
-    "ts-node": "^10.9.1",
-    "typescript": "~4.7.4"
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
+    "html-webpack-plugin": "^5.6.0",
+    "husky": "^9.0.10",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^15.2.1",
+    "mini-css-extract-plugin": "^2.8.0",
+    "postcss": "^8.4.33",
+    "postcss-loader": "^8.1.0",
+    "postcss-preset-env": "^9.3.0",
+    "prettier": "^3.2.4",
+    "sass": "^1.70.0",
+    "sass-loader": "^14.1.0",
+    "style-loader": "^3.3.4",
+    "ts-jest": "^29.1.2",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3",
+    "webpack": "^5.90.1",
+    "webpack-bundle-analyzer": "^4.10.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.10.0"
   }
 }
