Misc build tweaks and cleanup

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,3 @@
-NODE_ENV='development'
 NODE_OPTIONS='--import tsx'
-REACT_APP_DISABLE_SERVICE_WORKER=true
-REACT_APP_ENABLE_WEB_VITALS=false
+
+ENVIRONMENT_CONFIG='localhost'
