--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,8 +1,22 @@
 server { 
   listen 80;
   server_name frontend;
-  location / {
-    root /usr/share/nginx/html;
+  root /usr/share/nginx/html;
+
+  sendfile           on;
+  sendfile_max_chunk 1m;
+  tcp_nopush         on;
+
+  gzip_static on;
+  brotli_static on;
+
+  location / {  
     try_files $uri /index.html;
+  }
+
+  location /static/ {
+    expires 1y;
+    add_header Cache-Control "public";
+    access_log off;
   }
 }
