--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "format": "prettier --write src/**/*.ts{,x} deploy/**/*.{,m,c}ts *.{m,c,}js{,on}",
     "preversion": "npm run lint",
     "version": "npm run build && git add .",
-    "postversion": "echo \"bash ./docker/build.sh\"",
+    "postversion": "bash ./docker/build.sh",
     "prepare": "husky || cd ."
   },
   "dependencies": {
@@ -89,6 +89,7 @@
     "@typescript-eslint/parser": "^6.20.0",
     "browserslist": "^4.21.3",
     "chalk": "^5.0.1",
+    "compression-webpack-plugin": "^11.0.0",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.10.0",
     "css-minimizer-webpack-plugin": "^6.0.0",
