--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "@reduxjs/toolkit": "^2.1.0",
     "jose": "^5.2.1",
     "marked": "^12.0.0",
-    "query-string": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
@@ -71,24 +70,25 @@
     "workbox-streams": "^7.0.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^6.4.1",
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.4.3",
     "@tsconfig/node20": "^20.1.2",
-    "@tsconfig/vite-react": "^3.0.0",
     "@types/google.maps": "^3.50.0",
     "@types/jest": "^29.5.12",
     "@types/marked": "^6.0.0",
     "@types/node": "^20.11.16",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "@types/url-join": "^4.0.1",
     "@types/webpack-bundle-analyzer": "^4.6.3",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
+    "babel-jest": "^29.7.0",
     "browserslist": "^4.21.3",
-    "chalk": "^5.0.1",
     "compression-webpack-plugin": "^11.0.0",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.10.0",
@@ -112,10 +112,8 @@
     "sass": "^1.70.0",
     "sass-loader": "^14.1.0",
     "style-loader": "^3.3.4",
-    "ts-jest": "^29.1.2",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
-    "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "webpack": "^5.90.1",
     "webpack-bundle-analyzer": "^4.10.1",
