--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
   },
   "private": true,
   "scripts": {
-    "start": "dotenv -- webpack serve --open --config config/webpack.serve.ts",
-    "build": "dotenv -- webpack --config config/webpack.prod.ts",
-    "build:dev": "dotenv -- webpack --config config/webpack.dev.ts",
-    "build:local": "dotenv -- webpack --config config/webpack.local.ts",
+    "start": "webpack serve --open --config config/webpack.serve.ts",
+    "build": "webpack --config config/webpack.prod.ts",
+    "build:dev": "webpack --config config/webpack.dev.ts",
+    "build:local": "webpack --config config/webpack.local.ts",
     "build:analyze": "webpack-bundle-analyzer dist/stats.json",
     "test": "jest --watchAll --config config/jest.config.ts",
     "test:ci": "jest --coverage --ci --config config/jest.config.ts",
@@ -94,16 +94,17 @@
     "css-loader": "^6.10.0",
     "css-minimizer-webpack-plugin": "^6.0.0",
     "dotenv": "^16.0.1",
-    "dotenv-cli": "^7.3.0",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.31.1",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
+    "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.0.10",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.1",
+    "markdown-loader": "^8.0.0",
     "mini-css-extract-plugin": "^2.8.0",
     "postcss": "^8.4.33",
     "postcss-loader": "^8.1.0",
