--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jose": "^5.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.1",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "web-vitals": "^3.0.0"
