--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "build:local": "webpack --config config/webpack.local.ts",
     "build:analyze": "webpack-bundle-analyzer dist/stats.json",
     "test": "jest --watchAll --config config/jest.config.ts",
-    "test:ci": "jest --coverage --ci --config config/jest.config.ts",
+    "test:ci": "jest --coverage --ci --config config/jest.config.ts --passWithNoTests",
     "test:debug": "jest --cache=false --detectOpenHandles --runInBand --watchAll --config config/jest.config.ts",
     "lint": "eslint src/**/*.ts{,x} config/**/*.{,m,c}ts *.{,m,c}js",
     "format": "prettier --write src/**/*.ts{,x} deploy/**/*.{,m,c}ts *.{m,c,}js{,on}",
@@ -64,7 +64,6 @@
     "@tsconfig/node20": "^20.1.2",
     "@types/google.maps": "^3.50.0",
     "@types/jest": "^29.5.12",
-    "@types/marked": "^6.0.0",
     "@types/node": "^20.11.16",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
