Prepare for search logic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,8 +23,10 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "cSpell.words": [
+    "autocomplate",
     "cacheable",
     "fontsource",
+    "geocode",
     "googlemaps",
     "linkedmink",
     "postbuild",
