--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-hook-form": "^7.50.1",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
+    "react-use": "^17.5.0",
     "web-vitals": "^3.0.0"
   },
   "devDependencies": {
@@ -80,6 +81,7 @@
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.31.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
