--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -7,7 +7,8 @@
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "Bundler",
     "sourceMap": true,
-    "strict": true
+    "strict": true,
+    "allowJs": true
   },
   "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["**/*.test.ts", "**/*.test.tsx"]
