--- a/.npmignore
+++ b/.npmignore
@@ -1,21 +1,5 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-
-# production
-*.tgz
-
-# misc
-.DS_Store
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-*.log
-
-/public/config.json
+*
+!dist/**
+!docker/nginx.conf
+!LICENSE.md
+!package.json
