--- a/amplify.yml
+++ b/amplify.yml
@@ -7,8 +7,9 @@ frontend:
     build:
       commands:
         - if [ "${AWS_BRANCH}" = "main" ]; then npm run build; else npm run build -- --profile; fi
+    
   artifacts:
-    baseDirectory: /build/
+    baseDirectory: /dist/
     files:
       - "**/*"
   cache:
