--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,14 @@ services:
       context: ./
       dockerfile: ./docker/Dockerfile
     ports:
-      - 8082:80
+      - 443:443
     volumes:
       - type: bind
         source: ./dist
         target: /usr/share/nginx/html
+      - type: bind
+        source: ./docker/localhost.secp384r1.crt
+        target: /etc/ssl/certs/localhost.crt
+      - type: bind
+        source: ./docker/localhost.secp384r1.key
+        target: /etc/ssl/certs/localhost.key
