--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,7 +1,9 @@
 server { 
-  listen 80;
-  server_name frontend;
-  root /usr/share/nginx/html;
+  listen 443 ssl http2;
+  server_name localhost;
+
+  ssl_certificate /etc/ssl/certs/localhost.crt;
+  ssl_certificate_key /etc/ssl/certs/localhost.key;
 
   sendfile           on;
   sendfile_max_chunk 1m;
@@ -9,6 +11,8 @@ server {
 
   gzip_static on;
   brotli_static on;
+
+  root /usr/share/nginx/html;
 
   location / {  
     try_files $uri /index.html;
