--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,14 +2,12 @@ FROM alpine:latest
 
 RUN apk add nginx nginx-mod-http-brotli
 
-COPY docker/nginx.conf /etc/nginx/http.d/default.conf
-
 WORKDIR /usr/share/nginx/html
 
+COPY docker/nginx.conf /etc/nginx/http.d/default.conf
 COPY dist/ .
 
-RUN ls -la .
-
 EXPOSE 80
+EXPOSE 443
 
 CMD ["nginx", "-g", "daemon off;"]
