Change build config

--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "type": "git",
     "url": "https://github.com/LinkedMink/road-wave-fm-web.git"
   },
+  "type": "module",
   "private": true,
   "scripts": {
-    "start": "webpack serve --open --config config/webpack.serve.ts",
-    "start:optimized": "docker-compose up -d && webpack --watch --config config/webpack.prod.ts",
-    "build": "webpack --config config/webpack.prod.ts",
-    "build:dev": "webpack --config config/webpack.dev.ts",
-    "build:local": "webpack --config config/webpack.local.ts",
+    "start": "cross-env-shell NODE_OPTIONS=\"--import tsx\" TARGET_ENV=local-dev webpack serve --open --config config/webpack.serve.ts",
+    "start:optimized": "docker-compose up -d && cross-env-shell NODE_OPTIONS=\"--import tsx\" TARGET_ENV=local-optimized webpack --watch --config config/webpack.prod.ts",
+    "build": "cross-env-shell NODE_OPTIONS=\"--import tsx\" TARGET_ENV=production webpack --config config/webpack.prod.ts",
+    "build:dev": "cross-env-shell NODE_OPTIONS=\"--import tsx\" TARGET_ENV=development webpack --config config/webpack.dev.ts",
+    "build:local": "cross-env-shell NODE_OPTIONS=\"--import tsx\" TARGET_ENV=localhost webpack --config config/webpack.local.ts",
     "build:analyze": "webpack-bundle-analyzer dist/stats.json",
     "test": "jest --watchAll --config config/jest.config.ts",
     "test:ci": "jest --coverage --ci --config config/jest.config.ts --passWithNoTests",
@@ -75,9 +76,9 @@
     "browserslist": "^4.21.3",
     "compression-webpack-plugin": "^11.0.0",
     "copy-webpack-plugin": "^12.0.2",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.10.0",
     "css-minimizer-webpack-plugin": "^6.0.0",
-    "dotenv": "^16.0.1",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.31.1",
@@ -97,7 +98,7 @@
     "prettier": "^3.2.4",
     "style-loader": "^3.3.4",
     "ts-loader": "^9.5.1",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.7.1",
     "type-fest": "^4.10.2",
     "typescript": "^5.3.3",
     "webpack": "^5.90.1",
