--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,8 +14,15 @@
     {
       "type": "chrome",
       "request": "launch",
-      "name": "Launch Chrome against localhost",
+      "name": "Launch Chrome localhost:3000",
       "url": "http://localhost:3000",
+      "webRoot": "${workspaceFolder}"
+    },
+    {
+      "type": "chrome",
+      "request": "launch",
+      "name": "Launch Chrome localhost",
+      "url": "https://localhost",
       "webRoot": "${workspaceFolder}"
     }
   ]
