--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -47,7 +47,7 @@ server {
   location / {
     try_files $uri $uri/ /index.html;
 
-    location ~* \.(ico|svg|png|txt)$ {
+    location ~* \.(ico|svg|png)$ {
       expires 7d;
       add_header Cache-Control "public";
       access_log off;
