--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -8,7 +8,8 @@
     "moduleResolution": "Bundler",
     "sourceMap": true,
     "strict": true,
-    "allowJs": true
+    "allowJs": true,
+    "outDir": "../dist"
   },
   "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["**/*.test.ts", "**/*.test.tsx"]
