--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /usr/share/nginx/html
 COPY docker/nginx.conf /etc/nginx/http.d/default.conf
 COPY dist/ .
 
-EXPOSE 80
-EXPOSE 443
+EXPOSE 80/tcp
+EXPOSE 443/tcp
 
 CMD ["nginx", "-g", "daemon off;"]
