fix: jest runner import TS file

--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "build:dev": "cross-env-shell NODE_OPTIONS=\"--import tsx\" TARGET_ENV=development webpack --config config/webpack.dev.ts",
     "build:local": "cross-env-shell NODE_OPTIONS=\"--import tsx\" TARGET_ENV=localhost webpack --config config/webpack.local.ts",
     "build:analyze": "webpack-bundle-analyzer dist/stats.json",
-    "test": "jest --watchAll --config config/jest.config.ts",
-    "test:ci": "jest --coverage --ci --config config/jest.config.ts --passWithNoTests",
-    "test:debug": "jest --cache=false --detectOpenHandles --runInBand --watchAll --config config/jest.config.ts",
+    "test": "jest --watchAll --config config/jest.config.mjs",
+    "test:ci": "jest --coverage --ci --config config/jest.config.mjs --passWithNoTests",
+    "test:debug": "jest --cache=false --detectOpenHandles --runInBand --watchAll --config config/jest.config.mjs",
     "lint": "eslint src/**/*.ts{,x} config/**/*.{,m,c}ts *.{,m,c}js",
     "format": "prettier --write src/**/*.ts{,x} deploy/**/*.{,m,c}ts *.{m,c,}js{,on}",
     "preversion": "npm run lint",
