--- a/docker/Dockerfile.dockerignore
+++ b/docker/Dockerfile.dockerignore
@@ -1,22 +1,19 @@
-.husky
-.vscode
-deploy/*
-!deploy/container/nginx.conf
-node_modules
-coverage
-public
-src
+__mocks__/
+.github/
+.husky/
+.vscode/
+coverage/
+dist/
+docker/
+!docker/nginx.conf
+**/node_modules/
 
-.env
-.eslintignore
 .eslintrc.cjs
-.gitignoore
-.prettierrc.cjs
-README.md
-screenshot.png
-tsconfig*.json
-webpack.*
-*.key
-*.key.pub
-config.json
-config.sample.json
+.git*
+.lintstagedrc.mjs
+.npm*
+.prettier*
+amplify.yml
+docker-compose.yml
+*.tgz
+*.md
