--- a/package.json
+++ b/package.json
@@ -25,15 +25,15 @@
   "private": true,
   "scripts": {
     "start": "cross-env-shell NODE_OPTIONS=\"--import tsx\" TARGET_ENV=local-dev webpack serve --open --config config/webpack.serve.ts",
-    "start:optimized": "docker-compose up -d && cross-env-shell NODE_OPTIONS=\"--import tsx\" TARGET_ENV=local-optimized webpack --watch --config config/webpack.prod.ts",
+    "start:optimized": "docker compose up -d && cross-env-shell NODE_OPTIONS=\"--import tsx\" TARGET_ENV=local-optimized webpack --watch --config config/webpack.prod.ts",
     "build": "cross-env-shell NODE_OPTIONS=\"--import tsx\" TARGET_ENV=production webpack --config config/webpack.prod.ts",
     "build:dev": "cross-env-shell NODE_OPTIONS=\"--import tsx\" TARGET_ENV=development webpack --config config/webpack.dev.ts",
     "build:local": "cross-env-shell NODE_OPTIONS=\"--import tsx\" TARGET_ENV=localhost webpack --config config/webpack.local.ts",
     "build:analyze": "webpack-bundle-analyzer dist/stats.json",
-    "test": "jest --watchAll --config config/jest.config.mjs",
-    "test:ci": "jest --coverage --ci --config config/jest.config.mjs --passWithNoTests",
-    "test:debug": "jest --cache=false --detectOpenHandles --runInBand --watchAll --config config/jest.config.mjs",
-    "lint": "eslint src/**/*.ts{,x} config/**/*.{,m,c}ts *.{,m,c}js",
+    "test": "jest --watchAll --config config/jest.config.js",
+    "test:ci": "jest --coverage --ci --config config/jest.config.js --passWithNoTests",
+    "test:debug": "jest --cache=false --detectOpenHandles --runInBand --watchAll --config config/jest.config.js",
+    "lint": "eslint src/**/*.ts{,x} config/**/*.ts *.{,m,c}js",
     "format": "prettier --write src/**/*.ts{,x} deploy/**/*.{,m,c}ts *.{m,c,}js{,on}",
     "preversion": "npm run lint",
     "version": "npm run build && git add .",
@@ -53,15 +53,15 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-use": "^17.5.0",
-    "web-vitals": "^3.0.0"
+    "web-vitals": "^4.2.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
-    "@testing-library/dom": "^9.3.4",
+    "@testing-library/dom": "^10.1.0",
     "@testing-library/jest-dom": "^6.4.1",
-    "@testing-library/react": "^14.2.1",
+    "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@tsconfig/node20": "^20.1.2",
     "@types/google.maps": "^3.50.0",
@@ -70,20 +70,17 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/webpack-bundle-analyzer": "^4.6.3",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "@typescript-eslint/parser": "^7.0.1",
     "babel-jest": "^29.7.0",
     "browserslist": "^4.21.3",
     "compression-webpack-plugin": "^11.0.0",
     "copy-webpack-plugin": "^12.0.2",
     "cross-env": "^7.0.3",
     "css-loader": "^7.0.0",
-    "css-minimizer-webpack-plugin": "^6.0.0",
-    "eslint": "^8.23.0",
-    "eslint-config-prettier": "^9.1.0",
+    "css-minimizer-webpack-plugin": "^7.0.0",
+    "eslint": "^9.8.0",
     "eslint-plugin-react": "^7.31.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
+    "globals": "^15.8.0",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.0.10",
@@ -96,15 +93,16 @@
     "postcss-loader": "^8.1.0",
     "postcss-preset-env": "^9.3.0",
     "prettier": "^3.2.4",
-    "style-loader": "^3.3.4",
+    "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
     "tsx": "^4.7.1",
     "type-fest": "^4.10.2",
     "typescript": "^5.3.3",
+    "typescript-eslint": "^8.0.0",
     "webpack": "^5.90.1",
     "webpack-bundle-analyzer": "^4.10.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.1",
-    "webpack-merge": "^5.10.0"
+    "webpack-merge": "^6.0.1"
   }
 }
