--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -28,13 +28,14 @@ server {
 }
 
 server { 
-  listen 443 ssl http2;
-  listen [::]:443 ssl http2;
+  listen 443 ssl;
+  listen [::]:443 ssl;
   server_name localhost;
 
   ssl_certificate /etc/ssl/certs/localhost.crt;
   ssl_certificate_key /etc/ssl/certs/localhost.key;
 
+  http2              on;
   sendfile           on;
   sendfile_max_chunk 1m;
   tcp_nopush         on;
