--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "start": "cross-env-shell NODE_OPTIONS=\"--import tsx\" TARGET_ENV=local-dev webpack serve --open --config config/webpack.serve.ts",
-    "start:optimized": "docker compose up -d && cross-env-shell NODE_OPTIONS=\"--import tsx\" TARGET_ENV=local-optimized webpack --watch --config config/webpack.prod.ts",
-    "build": "cross-env-shell NODE_OPTIONS=\"--import tsx\" TARGET_ENV=production webpack --config config/webpack.prod.ts",
-    "build:dev": "cross-env-shell NODE_OPTIONS=\"--import tsx\" TARGET_ENV=development webpack --config config/webpack.dev.ts",
-    "build:local": "cross-env-shell NODE_OPTIONS=\"--import tsx\" TARGET_ENV=localhost webpack --config config/webpack.local.ts",
+    "start": "dotenvx run --env TARGET_ENV=local-dev -- webpack serve --open --config config/webpack.serve.ts",
+    "start:optimized": "docker compose up -d && dotenvx run --env TARGET_ENV=local-optimized -- webpack --watch --config config/webpack.prod.ts",
+    "build": "dotenvx run --env TARGET_ENV=production -- webpack --config config/webpack.prod.ts",
+    "build:dev": "dotenvx run --env TARGET_ENV=development -- webpack --config config/webpack.dev.ts",
+    "build:local": "dotenvx run --env TARGET_ENV=localhost -- webpack --config config/webpack.local.ts",
     "build:analyze": "webpack-bundle-analyzer dist/stats.json",
+    "build:docker": "dotenvx run -- docker compose build -- rwf-api",
     "test": "jest --watchAll --config config/jest.config.js",
     "test:ci": "jest --coverage --ci --config config/jest.config.js --passWithNoTests",
     "test:debug": "jest --cache=false --detectOpenHandles --runInBand --watchAll --config config/jest.config.js",
@@ -37,7 +38,7 @@
     "format": "prettier --write src/**/*.ts{,x} deploy/**/*.{,m,c}ts *.{m,c,}js{,on}",
     "preversion": "npm run lint",
     "version": "npm run build && git add .",
-    "postversion": "bash ./docker/build.sh",
+    "postversion": "bash ./config/build.sh",
     "prepare": "husky || cd ."
   },
   "dependencies": {
@@ -59,6 +60,7 @@
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
+    "@dotenvx/dotenvx": "^1.6.4",
     "@testing-library/dom": "^10.1.0",
     "@testing-library/jest-dom": "^6.4.1",
     "@testing-library/react": "^16.0.0",
@@ -66,7 +68,7 @@
     "@tsconfig/node20": "^20.1.2",
     "@types/google.maps": "^3.50.0",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.16",
+    "@types/node": "^22.1.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/webpack-bundle-analyzer": "^4.6.3",
@@ -74,7 +76,6 @@
     "browserslist": "^4.21.3",
     "compression-webpack-plugin": "^11.0.0",
     "copy-webpack-plugin": "^12.0.2",
-    "cross-env": "^7.0.3",
     "css-loader": "^7.0.0",
     "css-minimizer-webpack-plugin": "^7.0.0",
     "eslint": "^9.8.0",
@@ -91,7 +92,7 @@
     "mini-css-extract-plugin": "^2.8.0",
     "postcss": "^8.4.33",
     "postcss-loader": "^8.1.0",
-    "postcss-preset-env": "^9.3.0",
+    "postcss-preset-env": "^10.0.0",
     "prettier": "^3.2.4",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
