--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -20,6 +20,10 @@ map $http_forwarded $proxy_add_forwarded {
     default "$proxy_forwarded_elem";
 }
 
+limit_req_zone $binary_remote_addr zone=static:8m rate=10r/s;
+limit_req_zone $binary_remote_addr zone=data:8m rate=4r/s;
+limit_req_zone $binary_remote_addr zone=user:8m rate=2r/s;
+
 server {
 	listen 80 default_server;
 	listen [::]:80 default_server;
@@ -46,6 +50,8 @@ server {
   root /usr/share/nginx/html;
 
   location / {
+    limit_req zone=static burst=16 nodelay;
+
     try_files $uri $uri/ /index.html;
 
     location ~* \.(ico|svg|png)$ {
@@ -56,28 +62,34 @@ server {
   }
 
   location /static/ {
+    limit_req zone=static burst=16 nodelay;
+
     expires 1y;
     add_header Cache-Control "public";
     access_log off;
   }
 
   location /api/ {
+    limit_req zone=data burst=8 delay=4;
+
     proxy_set_header Forwarded $proxy_add_forwarded;
 
     location /api/data {
-        return 302 /api/data/;
+      return 302 /api/data/;
     }
 
     location /api/data/ {
-      proxy_pass http://road-wave-fm-api:8080/;
+      proxy_pass http://rwf-api:58081/;
     }
 
     location /api/user {
-        return 302 /api/user/;
+      return 302 /api/user/;
     }
 
     location /api/user/ {
-      proxy_pass http://node-user-service:8080/;
+      limit_req zone=user burst=4 delay=2;
+
+      proxy_pass http://eiu-api:58080/;
     }
   }
 }
