Misc changes to reach parity functionality with new APIs

--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "build:dev": "dotenvx run --env TARGET_ENV=development -- webpack --config config/webpack.dev.ts",
     "build:local": "dotenvx run --env TARGET_ENV=localhost -- webpack --config config/webpack.local.ts",
     "build:analyze": "webpack-bundle-analyzer dist/stats.json",
-    "build:docker": "dotenvx run -- docker compose build -- rwf-api",
-    "test": "jest --watchAll --config config/jest.config.js",
+    "build:docker": "dotenvx run -- docker compose build -- web",
+    "test": "jest --config config/jest.config.js --watch",
     "test:ci": "jest --coverage --ci --config config/jest.config.js --passWithNoTests",
-    "test:debug": "jest --cache=false --detectOpenHandles --runInBand --watchAll --config config/jest.config.js",
-    "lint": "eslint src/**/*.ts{,x} config/**/*.ts *.{,m,c}js",
-    "format": "prettier --write src/**/*.ts{,x} deploy/**/*.{,m,c}ts *.{m,c,}js{,on}",
+    "test:debug": "jest --cache=false --detectOpenHandles --runInBand --config config/jest.config.js --watch",
+    "lint": "eslint src/**/*.ts{,x} config/**/*.ts *.js",
+    "format": "prettier --write src/**/*.ts{,x} config/**/*.ts *.js",
     "preversion": "npm run lint",
     "version": "npm run build && git add .",
     "postversion": "bash ./config/build.sh",
