Misc prep and fixed for prerelease

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -54,7 +54,7 @@ server {
 
     try_files $uri $uri/ /index.html;
 
-    location ~* \.(ico|svg|png)$ {
+    location ~* \.(ico|svg|png|json|txt)$ {
       expires 7d;
       add_header Cache-Control "public";
       access_log off;
@@ -70,6 +70,15 @@ server {
   }
 
   location /api/ {
+    gzip on;
+    gzip_min_length 1024;
+    gzip_types text/plain application/json;
+    gzip_comp_level 5;
+    
+    brotli on;
+    brotli_min_length 1024;
+    brotli_types text/plain application/json;
+
     limit_req zone=data burst=8 delay=4;
 
     proxy_set_header Forwarded $proxy_add_forwarded;
