--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@linkedmink/road-wave-fm-web",
-  "version": "2.0.0-0",
+  "version": "2.0.0-1",
   "description": "A web application to communicate with the Road Wave FM data source",
   "homepage": "https://github.com/LinkedMink/road-wave-fm-web#readme",
   "bugs": {
@@ -30,7 +30,7 @@
     "build:dev": "dotenvx run --env TARGET_ENV=development -- webpack --config config/webpack.dev.ts",
     "build:local": "dotenvx run --env TARGET_ENV=localhost -- webpack --config config/webpack.local.ts",
     "build:analyze": "webpack-bundle-analyzer dist/stats.json",
-    "build:docker": "dotenvx run -- docker compose build -- web",
+    "build:docker": "dotenvx run -- docker compose build --pull -- web",
     "test": "jest --config config/jest.config.js --watch",
     "test:ci": "jest --coverage --ci --config config/jest.config.js --passWithNoTests",
     "test:debug": "jest --cache=false --detectOpenHandles --runInBand --config config/jest.config.js --watch",
@@ -45,6 +45,8 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@fontsource/roboto": "^5.0.8",
+    "@linkedmink/eip-4361-parser": "^1.0.0-7",
+    "ethers": "^6.13.2",
     "@mui/icons-material": "^5.10.2",
     "@mui/material": "^5.10.2",
     "@tanstack/react-query": "^5.51.23",
