--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
   },
   "type": "module",
   "private": true,
+  "sideEffects": false,
   "scripts": {
-    "start": "dotenvx run --env TARGET_ENV=local-dev -- webpack serve --open --config config/webpack.serve.ts",
-    "start:optimized": "docker compose up -d && dotenvx run --env TARGET_ENV=local-container -- webpack --watch --config config/webpack.prod.ts",
+    "start": "dotenvx run --env TARGET_ENV=local -- webpack serve --open --config config/webpack.serve.ts",
+    "start:optimized": "docker compose up -d -- web && dotenvx run --env TARGET_ENV=local -- webpack --watch --config config/webpack.prod.ts",
     "build": "dotenvx run --env TARGET_ENV=production -- webpack --config config/webpack.prod.ts",
     "build:dev": "dotenvx run --env TARGET_ENV=development -- webpack --config config/webpack.dev.ts",
-    "build:local": "dotenvx run --env TARGET_ENV=localhost -- webpack --config config/webpack.local.ts",
+    "build:local": "dotenvx run --env TARGET_ENV=local -- webpack --config config/webpack.local.ts",
     "build:analyze": "webpack-bundle-analyzer dist/stats.json",
     "build:docker": "dotenvx run -- docker compose build --pull -- web",
     "test": "jest --config config/jest.config.js --watch",
@@ -45,10 +46,10 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@fontsource/roboto": "^5.0.8",
-    "@linkedmink/eip-4361-parser": "^1.0.0-15",
+    "@linkedmink/eip-4361-parser": "^1.0.0-16",
     "ethers": "^6.13.2",
-    "@mui/icons-material": "^5.10.2",
-    "@mui/material": "^5.10.2",
+    "@mui/icons-material": "^6.0.1",
+    "@mui/material": "^6.0.1",
     "@tanstack/react-query": "^5.51.23",
     "@trpc/client": "^11.0.0-rc.477",
     "@trpc/react-query": "^11.0.0-rc.477",
