--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "test:debug": "jest --cache=false --detectOpenHandles --runInBand --config config/jest.config.js --watch",
     "lint": "eslint src/**/*.ts{,x} config/**/*.ts *.js",
     "format": "prettier --write src/**/*.ts{,x} config/**/*.ts *.js",
-    "preversion": "npm run lint",
-    "version": "npm run build && git add .",
+    "preversion": "npm run build && npm run lint",
+    "version": "git add .",
     "postversion": "npm run build:docker",
     "prepare": "husky || cd ."
   },
@@ -46,7 +46,7 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@fontsource/roboto": "^5.0.8",
-    "@linkedmink/eip-4361-parser": "^1.0.0-16",
+    "@linkedmink/eip-4361-parser": "^1.0.1",
     "ethers": "^6.13.2",
     "@mui/icons-material": "^6.0.1",
     "@mui/material": "^6.0.1",
@@ -70,7 +70,7 @@
     "@testing-library/jest-dom": "^6.4.1",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "@tsconfig/node20": "^20.1.2",
+    "@tsconfig/node22": "^22.0.0",
     "@types/google.maps": "^3.50.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.1.0",
