--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/LinkedMink/road-wave-fm-web.git"
+    "url": "git+https://github.com/LinkedMink/road-wave-fm-web.git"
   },
   "type": "module",
   "private": true,
@@ -47,12 +47,12 @@
     "@emotion/styled": "^11.10.0",
     "@fontsource/roboto": "^5.0.8",
     "@linkedmink/eip-4361-parser": "^1.0.1",
-    "ethers": "^6.13.2",
     "@mui/icons-material": "^6.0.1",
     "@mui/material": "^6.0.1",
     "@tanstack/react-query": "^5.51.23",
     "@trpc/client": "^11.0.0-rc.477",
     "@trpc/react-query": "^11.0.0-rc.477",
+    "ethers": "^6.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
@@ -87,13 +87,11 @@
     "eslint-plugin-react": "^7.31.1",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "globals": "^15.8.0",
-    "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.0.10",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.1",
-    "markdown-loader": "^8.0.0",
     "mini-css-extract-plugin": "^2.8.0",
     "postcss": "^8.4.33",
     "postcss-loader": "^8.1.0",
