Misc cleanup and fixes

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -21,8 +21,7 @@ map $http_forwarded $proxy_add_forwarded {
 }
 
 limit_req_zone $binary_remote_addr zone=static:8m rate=14r/s;
-limit_req_zone $binary_remote_addr zone=data:8m rate=4r/s;
-limit_req_zone $binary_remote_addr zone=user:8m rate=2r/s;
+limit_req_zone $binary_remote_addr zone=api:8m rate=2r/s;
 
 server {
 	listen 80 default_server;
@@ -50,19 +49,19 @@ server {
   root /usr/share/nginx/html;
 
   location / {
-    limit_req zone=static burst=24 nodelay;
+    limit_req zone=static burst=24 delay=18;
 
     try_files $uri $uri/ /index.html;
 
     location ~* \.(ico|svg|png|json|txt)$ {
-      expires 7d;
+      expires 30d;
       add_header Cache-Control "public";
       access_log off;
     }
   }
 
   location /static/ {
-    limit_req zone=static burst=24 nodelay;
+    limit_req zone=static burst=24 delay=18;
 
     expires 1y;
     add_header Cache-Control "public";
@@ -79,7 +78,7 @@ server {
     brotli_min_length 1024;
     brotli_types text/plain application/json;
 
-    limit_req zone=data burst=8 delay=4;
+    limit_req zone=api burst=6 delay=2;
 
     proxy_set_header Forwarded $proxy_add_forwarded;
 
@@ -96,8 +95,6 @@ server {
     }
 
     location /api/user/ {
-      limit_req zone=user burst=4 delay=2;
-
       proxy_pass http://eiu-api:58080/;
     }
   }
