--- a/package.json
+++ b/package.json
@@ -49,9 +49,6 @@
     "@linkedmink/eip-4361-parser": "^1.0.1",
     "@mui/icons-material": "^6.0.1",
     "@mui/material": "^6.0.1",
-    "@tanstack/react-query": "^5.51.23",
-    "@trpc/client": "^11.0.0-rc.477",
-    "@trpc/react-query": "^11.0.0-rc.477",
     "ethers": "^6.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -101,7 +98,7 @@
     "ts-loader": "^9.5.1",
     "tsx": "^4.7.1",
     "type-fest": "^4.10.2",
-    "typescript": "^5.3.3",
+    "typescript": "~5.5.4",
     "typescript-eslint": "^8.0.0",
     "webpack": "^5.90.1",
     "webpack-bundle-analyzer": "^4.10.1",
