--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -8,11 +8,7 @@
     "sourceMap": true,
     "strict": true,
     "allowJs": true,
-    "outDir": "../dist",
-    // TODO Repo independent way to link this for both container and local build
-    "paths": {
-      "@linkedmink/road-wave-fm-rpc": ["../../road-wave-fm-rpc/src/index.ts"]
-    }
+    "outDir": "../dist"
   },
   "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["**/*.test.ts", "**/*.test.tsx"]
